--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "crypto-js": "^3.1.9-1",
     "dexie": "^1.5.1",
     "moment": "^2.18.1",
     "rxjs": "^5.1.0",
@@ -34,6 +35,7 @@
     "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "^4.0.0",
     "@types/chrome": "^0.0.44",
+    "@types/crypto-js": "^3.1.33",
     "@types/jasmine": "2.5.38",
     "@types/moment": "^2.13.0",
     "@types/node": "~6.0.60",
