--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "dexie": "^1.5.1",
     "moment": "^2.18.1",
     "rxjs": "^5.1.0",
+    "sax": "^1.2.2",
     "uuid": "^3.0.1",
-    "xml2js": "^0.4.17",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -40,8 +40,8 @@
     "@types/jasmine": "2.5.38",
     "@types/moment": "^2.13.0",
     "@types/node": "~6.0.60",
+    "@types/sax": "^1.0.0",
     "@types/uuid": "^2.0.29",
-    "@types/xml2js": "^0.0.33",
     "autoprefixer": "^6.5.3",
     "codelyzer": "~2.0.0",
     "css-loader": "^0.26.1",
