--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "crypto-js": "^3.1.9-1",
-    "dexie": "^1.5.1",
+    "dexie": "^2.0.0-beta.10",
     "moment": "^2.18.1",
     "rxjs": "^5.1.0",
     "sax": "^1.2.2",
