--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "moment": "^2.18.1",
     "rxjs": "^5.1.0",
     "uuid": "^3.0.1",
@@ -35,6 +36,7 @@
     "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "^4.0.0",
     "@types/chrome": "^0.0.44",
+    "@types/hammerjs": "^2.0.34",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "@types/uuid": "^2.0.29",
